modified file homework.html

--- a/homework.html
+++ b/homework.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JavaScript Homework</title>
-    <link rel="stylesheet" href="../Homework/css/homework.css">
-    <script src="../Homework/js/homework.js"></script>
+    <link rel="stylesheet" href="../Curso JS - Umich/css/homework.css">
+    <script src="../Curso JS - Umich/js/homework.js"></script>
 </head>
 <body>
     <h1>JavaScript Homework</h1>
